--- a/src/Alexa.Net.Lambda/Alexa.Net.Lambda.csproj
+++ b/src/Alexa.Net.Lambda/Alexa.Net.Lambda.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <VersionPrefix>1.0.0</VersionPrefix>
     <Authors>Nick Cipollina</Authors>
     <Description>Simple package to enable Alexa Skill development in .Net with Dependency Injection</Description>
     <PackageProjectUrl>https://github.com/ncipollina/alexa-net-lambda</PackageProjectUrl>
