--- a/src/Alexa.Net.Lambda/Alexa.Net.Lambda.csproj
+++ b/src/Alexa.Net.Lambda/Alexa.Net.Lambda.csproj
@@ -6,12 +6,13 @@
     <Nullable>enable</Nullable>
     <VersionPrefix>1.0.0</VersionPrefix>
     <Authors>Nick Cipollina</Authors>
-    <Description>Simple package to enable Alexa Skill development in .Net with Dependency Injection</Description>
+    <Description>Simple package to enable Alexa Skill development in .Net with Dependency Injection             </Description>
     <PackageProjectUrl>https://github.com/ncipollina/alexa-net-lambda</PackageProjectUrl>
     <RepositoryUrl>https://github.com/ncipollina/alexa-net-lambda</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>amazon;alexa;echo;dot;echo dot;skills;lambda</PackageTags>
-    <PackageReleaseNotes>Initial version of Lambda Function with Dependency Injection.</PackageReleaseNotes>
+    <PackageReleaseNotes>Added ISkillContextAccessor to make request information available in Dependency Injection container.</PackageReleaseNotes>
+    <PackageVersion>1.0.1</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
